# QTrans

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  README_zh.md  vcpkg-configuration.json  vcpkg.json
.github/: README.md
.github/workflows/: format-check.yml  release-macos.yml  release-windows.yml  release.yml
.github/workflows/ci/: branch-policy.yml  format-check.yml
.github/workflows/release/: release.yml
docs/: README_zh.md
docs/develop/: README.md  branch-protection.md  build.md  ci.md  code-style.md  release.md  workflow.md
overlay/llama-cpp/: portfile.cmake  vcpkg.json
resources/: qtrans.qrc
scripts/: verify-windows-pe-imports.sh
src/app/: backend.cpp  backend.h  main.cpp  mainwindow.cpp  mainwindow.h  modal_overlay.cpp  modal_overlay.h  single_instance.cpp  single_instance.h  task_service.cpp  task_service.h  widget_utils.cpp  widget_utils.h
src/app/mac/: single_instance.mm
src/app/ui/: alert_panel.cpp  alert_panel.h  app_theme.cpp  app_theme.h  download_progress_panel.cpp  download_progress_panel.h  image_utils.cpp  image_utils.h  model_missing_panel.cpp  model_missing_panel.h  model_page.cpp  model_page.h  sidebar_widget.cpp  sidebar_widget.h  translate_page.cpp  translate_page.h  wordselect_page.cpp  wordselect_page.h
src/app/win/: single_instance_activate.cpp
src/core/: app_paths.cpp  model_ops.cpp  model_ops.h  translation_languages.cpp  translation_languages.h
src/download/: download.cpp  download.h
src/model/: model_catalog.cpp  model_catalog.h  model_files.cpp  model_files.h
src/models/: hymt15.cpp  hymt15.h  translation_model.cpp  translation_model.h
src/network/: download.cpp  download.h
src/settings/: model_catalog.cpp  model_catalog.h  settings.cpp  settings.h
src/storage/: app_paths.cpp  app_paths.h  settings.cpp  settings.h
src/task/: cancel_token.h  task_orchestrator.cpp  task_orchestrator.h  task_queue.cpp  task_queue.h  task_types.h
src/translation/: hymt.cpp  hymt.h  inference_engine.cpp  inference_engine.h  translation_languages.cpp  translation_languages.h  translation_model.cpp  translation_model.h
src/wordselect/: clipboard_capture.cpp  clipboard_capture.h  hotkey_manager.cpp  hotkey_manager.h  popup_window.cpp  popup_window.h  session_controller.cpp  session_controller.h  system_tray.cpp  system_tray.h
src/wordselect/mac/: clipboard_capture.cpp  hotkey_manager.cpp  platform_utils.cpp  platform_utils.h
src/wordselect/win/: clipboard_capture.cpp  hotkey_manager.cpp
